# cftp_server

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Readme.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform.yml
src/actions/: command_actions.c  command_actions.h  dele.c  list.c  retr.c  stor.c
src/config_manager/: config_manager.c  config_manager.h  configurations.h
src/core/: connection.c  connection.h  error.c  error.h  logger.c  logger.h  server_state.c  server_state.h
src/core/structures/: hashmap.c  hashmap.h  segment_tree.c  segment_tree.h
src/engine/: command_parser.c  command_parser.h  control_handler.c  control_handler.h  data_handler.c  data_handler.h  ftp_status_codes.h  main.c
src/ipc/: interprocess_handler.c  interprocess_handler.h
src/security/: auth.c  auth.h  security.c  security.h
tests/: ftp_ensure_ftp_server_running.py  ftp_test_helper.py  test_ftp_auth.py  test_ftp_dele.py  test_ftp_list.py  test_ftp_upload_download.py  test_pasv_ports.py
